
Table "postal_address" {
  "postal_code" VARCHAR(10) [pk]
  "city" VARCHAR(50)
}

Table "school" {
  "school_id" SERIAL [pk, increment]
  "address" VARCHAR(50)
  "postal_code" VARCHAR(10)
}

Table "program" {
  "program_id" SERIAL [pk, increment]
  "program_name" VARCHAR(50)
}

Table "course" {
  "course_code" SERIAL [pk, increment]
  "course_name" VARCHAR(50)
  "yh_credits" INTEGER
  "is_standalone" BOOLEAN
  "description" TEXT
}

Table "education_leader" {
  "leader_id" SERIAL [pk, increment]
  "first_name" VARCHAR(50)
  "last_name" VARCHAR(50)
  "school_id" INTEGER
}

Table "teacher" {
  "teacher_id" SERIAL [pk, increment]
  "first_name" VARCHAR(50)
  "last_name" VARCHAR(50)
  "school_id" INTEGER
}

Table "class" {
  "class_id" SERIAL [pk, increment]
  "class_name" VARCHAR(50)
  "school_id" INTEGER
  "education_leader_id" INTEGER
  "program_id" INTEGER
  "starting_date" DATE
  "end_date" DATE
}

Table "student" {
  "student_id" SERIAL [pk, increment]
  "first_name" VARCHAR(50)
  "last_name" VARCHAR(50)
  "class_id" INTEGER
}

Table "student_info" {
  "student_id" INTEGER [pk]
  "social_sec_nr" VARCHAR(20)
  "address" VARCHAR(50)
  "postal_code" VARCHAR(10)
}

Table "employee_info" {
  "info_id" SERIAL [pk, increment]
  "education_leader_id" INTEGER
  "teacher_id" INTEGER
  "email" VARCHAR(100)
  "salary" INTEGER
  "is_consultant" BOOLEAN
  "address" VARCHAR(50)
  "postal_code" VARCHAR(10)
}

Table "consultant_agency" {
  "agency_id" SERIAL [pk, increment]
  "name" VARCHAR(50)
  "org_nr" VARCHAR(20)
  "has_f_tax_card" BOOLEAN
  "address" VARCHAR(50)
  "postal_code" VARCHAR(10)
}

Table "consultant" {
  "teacher_id" INTEGER [pk]
  "agency_id" INTEGER
  "hourly_rate" INTEGER
}

Table "program_content" {
  "program_id" INTEGER
  "course_code" INTEGER

  Indexes {
    (program_id, course_code) [pk]
  }
}

Table "course_instance" {
  "instance_id" SERIAL [pk, increment]
  "course_code" INTEGER
  "class_id" INTEGER
  "term" VARCHAR(20)
  "start_date" DATE
  "end_date" DATE
}

Table "teacher_course_rel" {
  "teacher_id" INTEGER
  "instance_id" INTEGER

  Indexes {
    (teacher_id, instance_id) [pk]
  }
}

Table "attendance" {
  "student_id" INTEGER
  "instance_id" INTEGER
  "date" DATE
  "status" VARCHAR(20)

  Indexes {
    (student_id, instance_id, date) [pk]
  }
}

Table "course_grade" {
  "student_id" INTEGER
  "instance_id" INTEGER
  "grade" VARCHAR(5)
  "date" DATE
  "points" INTEGER

  Indexes {
    (student_id, instance_id) [pk]
  }
}

Ref:"postal_address"."postal_code" < "school"."postal_code"

Ref:"school"."school_id" < "education_leader"."school_id"

Ref:"school"."school_id" < "teacher"."school_id"

Ref:"school"."school_id" < "class"."school_id"

Ref:"education_leader"."leader_id" < "class"."education_leader_id"

Ref:"program"."program_id" < "class"."program_id"

Ref:"class"."class_id" < "student"."class_id"

Ref:"student"."student_id" < "student_info"."student_id"

Ref:"postal_address"."postal_code" < "student_info"."postal_code"

Ref:"education_leader"."leader_id" < "employee_info"."education_leader_id"

Ref:"teacher"."teacher_id" < "employee_info"."teacher_id"

Ref:"postal_address"."postal_code" < "employee_info"."postal_code"

Ref:"postal_address"."postal_code" < "consultant_agency"."postal_code"

Ref:"teacher"."teacher_id" < "consultant"."teacher_id"

Ref:"consultant_agency"."agency_id" < "consultant"."agency_id"

Ref:"program"."program_id" < "program_content"."program_id"

Ref:"course"."course_code" < "program_content"."course_code"

Ref:"course"."course_code" < "course_instance"."course_code"

Ref:"class"."class_id" < "course_instance"."class_id"

Ref:"teacher"."teacher_id" < "teacher_course_rel"."teacher_id"

Ref:"course_instance"."instance_id" < "teacher_course_rel"."instance_id"

Ref:"student"."student_id" < "attendance"."student_id"

Ref:"course_instance"."instance_id" < "attendance"."instance_id"

Ref:"student"."student_id" < "course_grade"."student_id"

Ref:"course_instance"."instance_id" < "course_grade"."instance_id"
